<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>fooberticus</groupId>
    <artifactId>TF2PlayerCheck</artifactId>
    <version>1.0.0</version>

    <properties>
        <appMainClass>com.fooberticus.tf2playercheck.Main</appMainClass>

        <javaVersion>25</javaVersion>
        <maven.compiler.source>25</maven.compiler.source>
        <maven.compiler.target>25</maven.compiler.target>

        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <mavenCompilerPluginVersion>3.15.0</mavenCompilerPluginVersion>
        <execMavenPluginVersion>3.6.3</execMavenPluginVersion>
        <mavenAssemblyPluginVersion>3.8.0</mavenAssemblyPluginVersion>
        <lombokVersion>1.18.42</lombokVersion>
        <slf4jVersion>2.0.17</slf4jVersion>
        <flatlafVersion>3.7</flatlafVersion>
        <juneauRestClientVersion>9.2.0</juneauRestClientVersion>
        <gsonVersion>2.13.2</gsonVersion>
        <commonsLang3Version>3.20.0</commonsLang3Version>
        <junitJupiterVersion>6.0.2</junitJupiterVersion>
        <commonsCodecVersion>1.19.0</commonsCodecVersion>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${mavenCompilerPluginVersion}</version>
                <configuration>
                    <source>${javaVersion}</source>
                    <target>${javaVersion}</target>
                    <compilerArgs>
                        <arg>-proc:full</arg>
                    </compilerArgs>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>${execMavenPluginVersion}</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <mainClass>${appMainClass}</mainClass>
                    <executable>java</executable>
                </configuration>
            </plugin>

            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>${mavenAssemblyPluginVersion}</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                        <configuration>
                            <archive>
                                <manifest>
                                    <mainClass>${appMainClass}</mainClass>
                                </manifest>
                            </archive>
                            <descriptorRefs>
                                <descriptorRef>jar-with-dependencies</descriptorRef>
                            </descriptorRefs>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombokVersion}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>${slf4jVersion}</version>
        </dependency>

        <dependency>
            <groupId>com.formdev</groupId>
            <artifactId>flatlaf</artifactId>
            <version>${flatlafVersion}</version>
        </dependency>
        <dependency>
            <groupId>com.formdev</groupId>
            <artifactId>flatlaf-intellij-themes</artifactId>
            <version>${flatlafVersion}</version>
        </dependency>
        <dependency>
            <groupId>com.formdev</groupId>
            <artifactId>flatlaf-extras</artifactId>
            <version>${flatlafVersion}</version>
        </dependency>

        <dependency>
            <groupId>org.apache.juneau</groupId>
            <artifactId>juneau-rest-client</artifactId>
            <version>${juneauRestClientVersion}</version>
        </dependency>

        <!-- fixes CVE in juneau client -->
        <dependency>
            <groupId>commons-codec</groupId>
            <artifactId>commons-codec</artifactId>
            <version>${commonsCodecVersion}</version>
        </dependency>

        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>${gsonVersion}</version>
        </dependency>

        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>${commonsLang3Version}</version>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${junitJupiterVersion}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
</project>